# personal_agent

./: .gitignore  README.md  grocery_list.md  meal_plan.md  pyproject.toml
src/personal_agent/: crew.py  main.py
src/personal_agent/config/: agents.yaml  tasks.yaml
