[project]
name = "personal_agent"
version = "0.1.0"
description = "personal_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
]

[project.scripts]
personal_agent = "personal_agent.main:run"
run_crew = "personal_agent.main:run"
train = "personal_agent.main:train"
replay = "personal_agent.main:replay"
test = "personal_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
